--- a/dynatrace-operator/chart/default/questions.yml
+++ b/dynatrace-operator/chart/default/questions.yml
@@ -3,8 +3,17 @@ categories:
   - Monitoring
 questions:
 
-  #################### Global Configuration ####################
+  - variable: crdApplied
+    label: "CRD manually applied"
+    description: "Please make sure you have applied the latest CRD by following the instructions in the description above."
+    default: ""
+    required: true
+    type: enum
+    options:
+      - "yes"
+    group: "Prerequisites"
 
+  #################### Global Configuration ####################
   - variable: apiUrl
     label: "Dynatrace API URL"
     description: "Dynatrace API URL including `/api` path at the end"
@@ -12,6 +21,7 @@ questions:
     type: string
     required: true
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: apiToken
     label: "Dynatrace API token"
@@ -19,6 +29,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: paasToken
     label: "Dynatrace PaaS token"
@@ -27,6 +38,7 @@ questions:
     type: string
     required: true
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: skipCertCheck
     label: "Skip certificate check"
@@ -34,6 +46,7 @@ questions:
     default: false
     type: boolean
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: proxy
     label: "Define a proxy by it's value"
@@ -41,6 +54,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: trustedCAs
     label: "Add custom CA certificates"
@@ -48,6 +62,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: networkZone
     label: "Define a network zone"
@@ -55,6 +70,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: enableIstio
     label: "Define if istio support should be enabled"
@@ -62,6 +78,7 @@ questions:
     default: false
     type: boolean
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: customPullSecret
     label: "Define a custom pull secret"
@@ -69,6 +86,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: operator.image
     label: "Set a custom image for operator"
@@ -76,6 +94,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: operator.customPullSecret
     label: "Set a custom pull secret for operator image"
@@ -83,6 +102,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: activeGate.image
     label: "Set custom image for the ActiveGate"
@@ -90,6 +110,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   - variable: oneAgent.image
     label: "Set custom image for the OneAgent"
@@ -97,6 +118,7 @@ questions:
     default: ""
     type: string
     group: "Global Configuration"
+    show_if: "crdApplied=yes"
 
   #################### Code Modules (OPTIONAL) ####################
 
@@ -106,6 +128,7 @@ questions:
     default: true
     type: boolean
     group: "Code Modules"
+    show_if: "crdApplied=yes"
     show_subquestion_if: true
     subquestions:
       - variable: codeModules.volume
@@ -117,12 +140,14 @@ questions:
           When using an emptyDir, the previous approach using init containers and wget will be used.
           - Please edit as Yaml for the best experience
         type: string
+        show_if: "crdApplied=yes"
       - variable: codeModules.resources
         label: "Optional: resource settings for injected OneAgent init-container"
         description: |
           Optional: resource settings for injected OneAgent init-container. 
           - Please edit as Yaml for the best experience
         type: string
+        show_if: "crdApplied=yes"
 
   #################### Infra Monitoring (OPTIONAL) ####################
 
@@ -132,17 +157,20 @@ questions:
     default: true
     type: boolean
     group: "Infrastructure Monitoring"
+    show_if: "crdApplied=yes"
     show_subquestion_if: true
     subquestions:
       - variable: infraMonitoring.nodeSelector
         label: "Node selector to control the selection of nodes"
         description: "Defines a NodeSelector to customize to which nodes the OneAgent will be rolled out - Please edit as Yaml for the best experience"
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.tolerations
         label: "Custom tolerations for the OneAgent"
         description: "Defines custom tolerations to the OneAgent - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.resources
         label: "resource settings for inframonitoring pods"
         description: |
@@ -150,39 +178,47 @@ questions:
           Consumption of the OneAgent heavily depends on the workload to monitor - adjust values accordingly.
           - Please edit as Yaml for the best experience
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.args
         label: "Arguments to OneAgent installer"
         description: "Defines additional arguments which get passed to the OneAgent installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.env
         label: "Environment variables for OneAgent"
         description: "Defines additional environment variables which get passed to the OneAgent - Please edit as Yaml for the best experience"
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.priorityClassName
         label: "Assign priority class to OneAgent pods"
         description: "Priority class to assign to OneAgent pods, more at https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.dnsPolicy
         label: "Set custom DNS Policy"
         description: "DNS Policy for OneAgent pods. Empty for default (ClusterFirst), more at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.labels
         label: "Custom labels for the OneAgent pods"
         description: "Defines labels for OneAgent pods to structure workloads as desired - Please edit as Yaml for the best experience"
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.useUnprivilegedMode
         label: "Run unprivileged"
         description: "Support full-stack OneAgent running on unprivileged mode"
         default: true
         type: boolean
+        show_if: "crdApplied=yes"
       - variable: infraMonitoring.useImmutableImage
         label: "Use immutable OneAgent image"
         description: "If set the immutable OneAgent image will be used"
         default: false
         type: boolean
+        show_if: "crdApplied=yes"
 
   #################### ClassicFullStack (OPTIONAL) ####################
 
@@ -192,50 +228,60 @@ questions:
     default: true
     type: boolean
     group: "Classic FullStack"
+    show_if: "crdApplied=yes"
     show_subquestion_if: true
     subquestions:
       - variable: classicFullStack.nodeSelector
         label: "Node selector to control the selection of nodes"
         description: "Defines a NodeSelector to customize to which nodes the OneAgent will be rolled out - Please edit as Yaml for the best experience"
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.tolerations
         label: "Custom tolerations for the OneAgent"
         description: "Defines custom tolerations to the OneAgent - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.args
         label: "Arguments to OneAgent installer"
         description: "Defines additional arguments which get passed to the OneAgent installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.env
         label: "Environment variables for OneAgent"
         description: "Defines additional environment variables which get passed to the OneAgent - Please edit as Yaml for the best experience"
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.priorityClassName
         label: "Assign priority class to OneAgent pods"
         description: "Priority class to assign to OneAgent pods, more at https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.dnsPolicy
         label: "Set custom DNS Policy"
         description: "DNS Policy for OneAgent pods. Empty for default (ClusterFirst), more at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.labels
         label: "Custom labels for the OneAgent pods"
         description: "Defines labels for OneAgent pods to structure workloads as desired - Please edit as Yaml for the best experience"
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.useUnprivilegedMode
         label: "Run unprivileged"
         description: "Support full-stack OneAgent running on unprivileged mode"
         default: true
         type: boolean
+        show_if: "crdApplied=yes"
       - variable: classicFullStack.useImmutableImage
         label: "Use immutable OneAgent image"
         description: "If set the immutable OneAgent image will be used"
         default: false
         type: boolean
+        show_if: "crdApplied=yes"
 
   #################### Kubernetes Monitoring (OPTIONAL) ####################
 
@@ -245,6 +291,7 @@ questions:
     default: true
     type: boolean
     group: "Kubernetes Monitoring"
+    show_if: "crdApplied=yes"
     show_subquestion_if: true
     subquestions:
       - variable: kubernetesMonitoring.replicas
@@ -252,46 +299,55 @@ questions:
         description: "Sets the amount of replicas of ActiveGate pods are made"
         default: 1
         type: int
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.serviceAccountName
         label: "Name of the service-account for ActiveGate-pods"
         description: "Optional: The name of the ServiceAccount to assign to the ActiveGate Pods."
         default: "dynatrace-kubernetes-monitoring"
         type: string
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.tolerations
         label: "Custom tolerations for the ActiveGate pods"
         description: "Defines custom tolerations for the ActiveGate pods - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.nodeSelector
         label: "Node selector to control the selection of nodes"
         description: "Defines a NodeSelector to customize to which nodes the ActiveGate will be rolled out on - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.labels
         label: "Custom labels for the ActiveGate pods"
         description: "Defines labels for ActiveGate pods to structure workloads as desired - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.args
         label: "Arguments for the ActiveGate installer"
         description: "Defines additional arguments which get passed to the ActiveGate installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.env
         label: "Environment variables for the ActiveGate"
         description: "Defines additional environment variables which get passed to the ActiveGate - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: kubernetesMonitoring.group
         label: "Activation group"
         description: "Optional: Set activation group for ActiveGate"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: showKubernetesMonitoringCustomPropertiesSource
         label: "Select custom properties source"
         description: "Select from where your custom properties are coming from. Value if you want to enter it directly. ValueFrom if you want to reference a secret."
         default: "Value"
         type: enum
+        show_if: "crdApplied=yes"
         options:
           - "Value"
           - "ValueFrom"
@@ -300,13 +356,13 @@ questions:
         description: "Optional: Add custom properties - Please edit as Yaml for the best experience - more at https://www.dynatrace.com/support/help/setup-and-configuration/dynatrace-activegate/configuration/configure-activegate/"
         default: ""
         type: multiline
-        show_if: "showKubernetesMonitoringCustomPropertiesSource=Value"
+        show_if: "crdApplied=yes && showKubernetesMonitoringCustomPropertiesSource=Value"
       - variable: kubernetesMonitoring.customProperties.valueFrom
         label: "Custom properties for the ActiveGate as reference"
         description: "Optional: Set the name of the secret that stores your custom properties"
         default: ""
         type: string
-        show_if: "showKubernetesMonitoringCustomPropertiesSource=ValueFrom"
+        show_if: "crdApplied=yes && showKubernetesMonitoringCustomPropertiesSource=ValueFrom"
 
 
   #################### Routing (OPTIONAL) ####################
@@ -317,6 +373,7 @@ questions:
     default: true
     type: boolean
     group: "Routing"
+    show_if: "crdApplied=yes"
     show_subquestion_if: true
     subquestions:
       - variable: routing.replicas
@@ -324,46 +381,55 @@ questions:
         description: "Sets the amount of replicas of ActiveGate pods are made"
         default: 1
         type: int
+        show_if: "crdApplied=yes"
       - variable: routing.serviceAccountName
         label: "Name of the service-account for ActiveGate-pods"
         description: "Optional: The name of the ServiceAccount to assign to the ActiveGate Pods."
         default: "dynatrace-routing"
         type: string
+        show_if: "crdApplied=yes"
       - variable: routing.tolerations
         label: "Custom tolerations for the ActiveGate pods"
         description: "Defines custom tolerations for the ActiveGate pods - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: routing.nodeSelector
         label: "Node selector to control the selection of nodes"
         description: "Defines a NodeSelector to customize to which nodes the ActiveGate will be rolled out on - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: routing.labels
         label: "Custom labels for the ActiveGate pods"
         description: "Defines labels for ActiveGate pods to structure workloads as desired - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: routing.args
         label: "Arguments for the ActiveGate installer"
         description: "Defines additional arguments which get passed to the ActiveGate installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: routing.env
         label: "Environment variables for the ActiveGate"
         description: "Defines additional environment variables which get passed to the ActiveGate - Please edit as Yaml for the best experience"
         default: ""
         type: multiline
+        show_if: "crdApplied=yes"
       - variable: routing.group
         label: "Activation group"
         description: "Optional: Set activation group for ActiveGate"
         default: ""
         type: string
+        show_if: "crdApplied=yes"
       - variable: showRoutingCustomPropertiesSource
         label: "Select custom properties source"
         description: "Select from where your custom properties are coming from. Value if you want to enter it directly. ValueFrom if you want to reference a secret."
         default: "Value"
         type: enum
+        show_if: "crdApplied=yes"
         options:
           - "Value"
           - "ValueFrom"
@@ -372,10 +438,10 @@ questions:
         description: "Optional: Add custom properties - Please edit as Yaml for the best experience - more at https://www.dynatrace.com/support/help/setup-and-configuration/dynatrace-activegate/configuration/configure-activegate/"
         default: ""
         type: multiline
-        show_if: "showRoutingCustomPropertiesSource=Value"
+        show_if: "crdApplied=yes && showRoutingCustomPropertiesSource=Value"
       - variable: routing.customProperties.valueFrom
         label: "Custom properties for the ActiveGate as reference"
         description: "Optional: Set the name of the secret that stores your custom properties"
         default: ""
         type: string
-        show_if: "showRoutingCustomPropertiesSource=ValueFrom"
+        show_if: "crdApplied=yes && showRoutingCustomPropertiesSource=ValueFrom"
