--- a/dynatrace-oneagent-operator/templates/Common/mutatingwebhookconfiguration.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/mutatingwebhookconfiguration.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: dynatrace-oneagent-webhook
@@ -36,4 +36,5 @@ webhooks:
         name: dynatrace-oneagent-webhook
         namespace: {{ .Release.Namespace }}
         path: /inject
-    admissionReviewVersions: ["v1beta1"]
+    admissionReviewVersions: ["v1beta1", "v1"]
+    sideEffects: None
