Update and renaming of main.yml to changelog-ci.yml

--- a/.github/workflows/changelog-ci.yml
+++ b/.github/workflows/changelog-ci.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Run Changelog CI
         uses: "Dynatrace/dynatrace-operator/actions/changelog-ci@master"
         with: 
-          config_file: "Dynatrace/dynatrace-operator/actions/changelog-ci/changelog-ci-config.json"
+          config_file: "./actions/changelog-ci/changelog-ci-config.json"
