Update config to work with v1beta1 changes

--- a/dynatrace-operator/chart/default/templates/Common/csi/clusterrole-csi.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/clusterrole-csi.yaml
@@ -30,4 +30,7 @@ rules:
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch"]
 {{end}}
