--- a/dynatrace-operator/chart/default/templates/Common/webhook/mutatingwebhookconfiguration.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/mutatingwebhookconfiguration.yaml
@@ -20,23 +20,38 @@ metadata:
   labels:
   {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
 webhooks:
-  - name: webhook.dynatrace.com
+  - name: webhook.pod.dynatrace.com
     reinvocationPolicy: IfNeeded
     rules:
-      - apiGroups: [""]
-        apiVersions: ["v1"]
-        operations: ["CREATE"]
-        resources: ["pods"]
+      - apiGroups: [ "" ]
+        apiVersions: [ "v1" ]
+        operations: [ "CREATE" ]
+        resources: [ "pods" ]
         scope: Namespaced
     namespaceSelector:
       matchExpressions:
-        - key: oneagent.dynatrace.com/instance
+        - key: dynakube.internal.dynatrace.com/instance
           operator: Exists
     clientConfig:
       service:
         name: dynatrace-webhook
-        namespace: {{ .Release.Namespace }}
+        namespace: dynatrace
         path: /inject
-    admissionReviewVersions: ["v1beta1", "v1"]
+    admissionReviewVersions: [ "v1beta1", "v1" ]
+    sideEffects: None
+  - name: webhook.ns.dynatrace.com
+    reinvocationPolicy: IfNeeded
+    rules:
+      - apiGroups: [ "" ]
+        apiVersions: [ "v1" ]
+        operations: [ "CREATE", "UPDATE"]
+        resources: [ "namespaces" ]
+        scope: Cluster
+    clientConfig:
+      service:
+        name: dynatrace-webhook
+        namespace: dynatrace
+        path: /label-ns
+    admissionReviewVersions: [ "v1beta1", "v1" ]
     sideEffects: None
 {{ end }}
