Updates webhook config/tests

--- a/dynatrace-operator/chart/default/tests/Common/webhook/deployment-webhook_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/webhook/deployment-webhook_test.yaml
@@ -84,13 +84,13 @@ tests:
                         path: /healthz
                         port: server-port
                         scheme: HTTPS
-                      initialDelaySeconds: 60
-                      periodSeconds: 10
                     ports:
-                      - name: metrics
-                        containerPort: 8383
-                      - name: server-port
-                        containerPort: 8443
+                    - name: metrics
+                      containerPort: 8383
+                    - name: validation
+                      containerPort: 8384
+                    - name: server-port
+                      containerPort: 8443
                     resources:
                       requests:
                         cpu: 300m
