--- a/dynatrace-operator/chart/default/tests/Common/webhook/mutatingwebhookconfiguration_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/webhook/mutatingwebhookconfiguration_test.yaml
@@ -14,22 +14,41 @@ tests:
       - equal:
           path: webhooks
           value:
-            - name: webhook.dynatrace.com
-              reinvocationPolicy: IfNeeded
-              rules:
-                - apiGroups: [""]
-                  apiVersions: ["v1"]
-                  operations: ["CREATE"]
-                  resources: ["pods"]
-                  scope: Namespaced
-              namespaceSelector:
-                matchExpressions:
-                  - key: oneagent.dynatrace.com/instance
-                    operator: Exists
-              clientConfig:
-                service:
-                  name: dynatrace-webhook
-                  namespace: NAMESPACE
-                  path: /inject
-              admissionReviewVersions: ["v1beta1", "v1"]
-              sideEffects: None
+              - name: webhook.pod.dynatrace.com
+                reinvocationPolicy: IfNeeded
+                failurePolicy: Ignore
+                timeoutSeconds: 2
+                rules:
+                  - apiGroups: [ "" ]
+                    apiVersions: [ "v1" ]
+                    operations: [ "CREATE" ]
+                    resources: [ "pods" ]
+                    scope: Namespaced
+                namespaceSelector:
+                  matchExpressions:
+                    - key: dynakube.internal.dynatrace.com/instance
+                      operator: Exists
+                clientConfig:
+                  service:
+                    name: dynatrace-webhook
+                    namespace: dynatrace
+                    path: /inject
+                admissionReviewVersions: [ "v1beta1", "v1" ]
+                sideEffects: None
+              - name: webhook.ns.dynatrace.com
+                reinvocationPolicy: IfNeeded
+                failurePolicy: Ignore
+                timeoutSeconds: 2
+                rules:
+                  - apiGroups: [ "" ]
+                    apiVersions: [ "v1" ]
+                    operations: [ "CREATE", "UPDATE"]
+                    resources: [ "namespaces" ]
+                    scope: Cluster
+                clientConfig:
+                  service:
+                    name: dynatrace-webhook
+                    namespace: dynatrace
+                    path: /label-ns
+                admissionReviewVersions: [ "v1beta1", "v1" ]
+                sideEffects: None
